[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtudp"
version = "0.1.0"
description = "Real-Time UDP - High-performance deterministic UDP packet transmission framework"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["udp", "networking", "real-time", "low-latency", "deterministic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/rtudp"
Documentation = "https://github.com/yourusername/rtudp#readme"
Repository = "https://github.com/yourusername/rtudp.git"
"Bug Tracker" = "https://github.com/yourusername/rtudp/issues"

[tool.setuptools]
packages = ["rtudp"]
include-package-data = true

[tool.setuptools.package-data]
rtudp = ["*.pyi"]
